--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
     
     /* NEUTRAL */
     --white: hsl(0, 0%, 100%);
-    --veryPaleBlue: hsl(230, 100%, 99%);
+    --veryPaleBlue: #F1F5FE;
     --ltGrayBlue: hsl(224, 65%, 95%);
     --grayBlue: hsl(225, 20%, 60%);
     --dkBlue: hsl(227, 35%, 25%);
@@ -79,7 +79,6 @@ section {
 
 .top-card,
 .bottom-card {
-    
     text-align: center;
 }
 
@@ -98,6 +97,13 @@ section {
 .amtSliderContainer {
     height: 75px;
     margin: 0 auto;
+}
+
+.card-billing {
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 /***************** SLIDER CSS *****************/
@@ -185,6 +191,41 @@ input[type=range] {
 
 /***************** END SLIDER CSS *****************/
 
+/***************** BEGIN TOGGLE CSS *****************/
+input[type='checkbox'] {
+  -webkit-appearance: none;
+  position: relative;
+  width: 50px;
+  height: 30px;
+  border-radius: 25px;
+  background-color: #ccc;
+  transition: background .3s;
+  outline: none;
+  cursor: pointer;
+}
+
+input[type='checkbox']::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 30%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  height: 1.25rem;
+  width: 1.25rem;
+  background-color: #fff;
+  transition: left .3s;
+} 
+
+input[type='checkbox']:checked {
+  background-color: var(--mintGreen);
+} 
+
+input[type='checkbox']:checked::after {
+  left: 70%;
+}
+/***************** END TOGGLE CSS *****************/
+
 .amtText {
     font-size: 3em;
 }
@@ -226,6 +267,7 @@ button {
 button:hover {
     background-color: var(--ltGrayRed);
     color: var(--ltRed);
+    cursor: pointer;
 }
 
 footer {
@@ -235,16 +277,50 @@ footer {
 
 @media only screen and (min-width: 768px){
 
+  body {
+    background-color: var(--veryPaleBlue);
+  }
+
+  main {
+    width: 85vw;
+    margin: 0 auto;
+  }
+
     header h3 {
-        width: 35vw;
+        width: 100%;
     }
 
-.card-header {
-    display: flex;
+  .card-header {
+      display: flex;
+      align-items: center;
+      margin-bottom: 5%;
+  }
+
+  #slider {
+    width: 100%;
+  }
+
+  .card-header-text {
+    height: auto;
+  }
+
+  .bottom-card {
+      flex-direction: row;
+      margin: 0 auto;
+      padding: 2% 0;
+      justify-content: space-evenly;
+  }
+
+  .bottom-card aside {
+    text-align: left;
+    width: 50%;
+    padding-left: 10%;
+    line-height: 1.75rem;
+  }
 }
 
-
-.bottom-card {
-    flex-direction: row;
-}
+@media only screen and (min-width: 1024px) {
+  .card-billing {
+    width: 43vw;
+  }
 }
