--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
     background: url('./images/bg-pattern.svg') no-repeat;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 h1,
